name:                coinmarketcap
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wilfreddenton/coinmarketcap#readme
license:             BSD3
license-file:        LICENSE
author:              Wilfred Denton
maintainer:          dentonw3@gmail.com
copyright:           2018 Wilfred Denton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API,
                       Client,
                       Types,
                       Core,
                       Utils,
                       Run
  build-depends:       base >= 4.7 && < 5,
                       MissingH,
                       bytestring >= 0.10,
                       casing,
                       aeson,
                       text,
                       http-api-data,
                       http-client,
                       http-client-tls,
                       servant,
                       servant-client
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wilfreddenton/coinmarketcap
